[gd_scene load_steps=6 format=3 uid="uid://dx0i4rwcavm60"]

[ext_resource type="Script" path="res://scripts/dialoge_area.gd" id="1_bkolo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ijng"]
resource_local_to_scene = true
size = Vector2(167.25, 118)

[sub_resource type="Animation" id="Animation_hgbkn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog/StyleCont/vfcont/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.577]
}

[sub_resource type="Animation" id="Animation_222q7"]
resource_name = "text_anim"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog/StyleCont/vfcont/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.577, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0o2b"]
_data = {
"RESET": SubResource("Animation_hgbkn"),
"text_anim": SubResource("Animation_222q7")
}

[node name="DialogeArea" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_bkolo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
shape = SubResource("RectangleShape2D_3ijng")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="Dialog" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="StyleCont" type="PanelContainer" parent="Dialog"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="vfcont" type="VFlowContainer" parent="Dialog/StyleCont"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Dialog/StyleCont/vfcont"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "My name is meow
"
visible_characters = 9
visible_ratio = 0.577

[node name="text_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0o2b")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="text_anim" to="." method="_on_text_anim_animation_finished"]
